# cv-geany-agent

./: .dockerignore  Dockerfile  extract_pdf_links.py  main.py  pyproject.toml  requirements.txt
src/: extract_lines.py  models.py  pdfextractor.py  portfolio_generator.py  prompt.py  resumeportfolioagent.py
